--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
 }
 
 #display-region {
@@ -11,7 +12,7 @@ body {
 }
 
 button {
-  margin: 4px;
+  margin: 10px;
 }
 
 .button-container {
@@ -33,7 +34,7 @@ button {
 
 .result-card {
   margin: 10px;
-  /* border: 1px solid black; */
+  border: 2px solid black;
   padding: 2px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -56,4 +57,5 @@ button {
   border: 1px solid black;
   padding: 2px;
   margin: 2px;
+
 }
